--- a/programms.html
+++ b/programms.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <title>Наши программы</title>
     <!-- Website's title ( it will be shown in browser's tab ), Change the website's title based on your Hotel information -->
-    <meta name="description" content="Colosseum Hotel is a responsive Hotel and Resort HTML template.">
-    <!-- Add your Hotel short description -->
     <meta name="keywords" content="Responsive,HTML5,CSS3,XML,JavaScript">
     <!-- Add some Keywords based on your Hotel and your business and separate them by comma -->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -131,7 +129,7 @@
                                                             </td>
                                                             
                                                             <td class="col_3">
-                                                                <h3>Цена</h3>
+                                                                <h3>Цена (руб.)</h3>
                                                             </td>
                                                             <td class="col_4 hide470">
                                                                 <h3>Время</h3>
