--- a/about.html
+++ b/about.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <title>О нас</title>
     <!-- Website's title ( it will be shown in browser's tab ), Change the website's title based on your Hotel information -->
-    <meta name="description" content="Colosseum Hotel is a responsive Hotel and Resort HTML template.">
-    <!-- Add your Hotel short description -->
     <meta name="keywords" content="Responsive,HTML5,CSS3,XML,JavaScript">
     <!-- Add some Keywords based on your Hotel and your business and separate them by comma -->
     <meta name="viewport"
@@ -119,7 +117,7 @@
                         <div class="title"><span>Салон элитной релаксации Жара</span></div>
                         <div class="sub-title">Только для вас</div>
                     </div>
-                    <div class="content">
+                    <div class="content" style="text-align: left;">
                         Удовольствие – в одном прикосновении от Вас и оно будет таким, как пожелаете его Вы — эротический массаж в Краснодаре Vip Hall Jara .  Удовольствие примет любой облик
 и оттенки чувственности – в том облике, который кажется Вам наиболее совершенным.
 
