add header image for all pages

--- a/about.html
+++ b/about.html
@@ -87,9 +87,16 @@
             </div>
         </header>
         <!-- End of Header Section -->
-<section id="luxury-rooms" class="clearfix">
-            <div class="room-boxess col-sm-6 col-md-3">
-            
+<section id="breadcrumb-section" data-bg-img="assets/img/slider/1.jpg">
+            <div class="inner-container container">
+                <div class="ravis-title">
+                    <div class="inner-box">
+                        <div class="title">О нас</div>
+                        <div class="sub-title">Салон Жара</div>
+                    </div>
+                </div>
+
+
             </div>
         </section>
         <!--End of Luxury Room Section-->
@@ -102,12 +109,7 @@
         <section id="past-events">
             <div class="inner-container container">
 
-                <div class="ravis-title">
-                    <div class="inner-box">
-                        <div class="title">О нас</div>
-                        <div class="sub-title">Салон Жара</div>
-                    </div>
-                </div>
+                
 
         <!--Welcome Section-->
         <section id="welcome-section">
