--- a/events.html
+++ b/events.html
@@ -92,9 +92,16 @@
 
 
         <!--Luxury Room Section-->
-        <section id="luxury-rooms" class="clearfix">
-            <div class="room-boxess col-sm-6 col-md-3">
-            
+       <section id="breadcrumb-section" data-bg-img="assets/img/slider/4.jpg">
+            <div class="inner-container container">
+                <div class="ravis-title">
+                    <div class="inner-box">
+                        <div class="title">Специальные предложения</div>
+                        <div class="sub-title">Акции и новости</div>
+                    </div>
+                </div>
+
+
             </div>
         </section>
         <!--End of Luxury Room Section-->
@@ -107,12 +114,7 @@
         <section id="past-events">
             <div class="inner-container container">
 
-                <div class="ravis-title">
-                    <div class="inner-box">
-                        <div class="title">Специальные предложения</div>
-                        <div class="sub-title">Акции и новости</div>
-                    </div>
-                </div>
+                
 
                 <div class="event-container">
                     <ul class="event-main-box clearfix">
