--- a/masters.html
+++ b/masters.html
@@ -92,9 +92,16 @@
 
 
         <!--Luxury Room Section-->
-        <section id="luxury-rooms" class="clearfix">
-            <div class="room-boxess col-sm-6 col-md-3">
-            
+        <section id="breadcrumb-section" data-bg-img="assets/img/slider/1.jpg">
+            <div class="inner-container container">
+                 <div class="ravis-title">
+                    <div class="inner-box">
+                        <div class="title">Наши мастера</div>
+                        <div class="sub-title">Наши мастера</div>
+                    </div>
+                </div>
+
+
             </div>
         </section>
         <!--End of Luxury Room Section-->
@@ -107,13 +114,8 @@
         <section id="past-events">
             <div class="inner-container container">
 
-                <div class="ravis-title">
-                    <div class="inner-box">
-                        <div class="title">Наши мастера</div>
-                        <div class="sub-title">Наши мастера</div>
-                    </div>
-                </div>
-        <section id="gallery" style="padding-top: 0;">
+               
+        <section id="gallery" style="padding-top: 40px;">
             <div class="inner-container container">
                 <!-- Gallery Container -->
                 <div class="gallery-container">
