--- a/programms.html
+++ b/programms.html
@@ -93,9 +93,16 @@
 
 
         <!--Luxury Room Section-->
-        <section id="luxury-rooms" class="clearfix">
-            <div class="room-boxess col-sm-6 col-md-3">
-            
+         <section id="breadcrumb-section" data-bg-img="assets/img/slider/2.jpg">
+            <div class="inner-container container">
+                <div class="ravis-title">
+                    <div class="inner-box">
+                        <div class="title">Наши программы</div>
+                        <div class="sub-title">На любой вкус</div>
+                    </div>
+                </div>
+
+
             </div>
         </section>
         <!--End of Luxury Room Section-->
@@ -107,12 +114,7 @@
         <!-- Special Offers -->
         <section id="special-offers">
             <div class="inner-container container">
-                <div class="ravis-title">
-                    <div class="inner-box">
-                        <div class="title">Наши программы</div>
-                        <div class="sub-title">На любой вкус</div>
-                    </div>
-                </div>
+                
 
                 <div class="packages-container clearfix">
                     <div class="package-box col-xs-12 col-sm-12 col-md-12">
