--- a/rules.html
+++ b/rules.html
@@ -93,9 +93,16 @@
 
 
         <!--Luxury Room Section-->
-                 <section id="luxury-rooms" class="clearfix">
-            <div class="room-boxess col-sm-6 col-md-3">
-            
+                <section id="breadcrumb-section" data-bg-img="assets/img/slider/2.jpg">
+            <div class="inner-container container">
+                 <div class="ravis-title">
+                    <div class="inner-box">
+                        <div class="title">Правила клуа</div>
+                        <div class="sub-title">Правила клуба</div>
+                    </div>
+                </div>
+
+
             </div>
         </section>
         <!--End of Luxury Room Section-->
@@ -108,12 +115,7 @@
         <section id="past-events">
             <div class="inner-container container">
 
-                <div class="ravis-title">
-                    <div class="inner-box">
-                        <div class="title">Правила клуа</div>
-                        <div class="sub-title">Правила клуба</div>
-                    </div>
-                </div>
+               
 
 
 <section id="special-offers" style="padding-top: 0;">
