--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic%7cPlayfair+Display:400,700%7cGreat+Vibes' rel='stylesheet' type='text/css'><!-- Attach Google fonts -->
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
-     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css"><!-- Attach the main stylesheet file -->
 
 
 
@@ -505,6 +504,7 @@
     <script type="text/javascript" src="assets/js/isotope.pkgd.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.magnific-popup.min.js"></script>
     <script type="text/javascript" src="assets/js/template.js"></script>
+    <script type="text/javascript" src="assets/js/mail.js"></script>
 <!--]-->
 <div class="cumf_bt_form_wrapper" style="display:none">
 <form id="contact_us_mail_feedback" action="/oldTi9QvqM6ytokU9Q8ylQq" method="post">
