--- a/contacts.html
+++ b/contacts.html
@@ -280,6 +280,7 @@
     <script type="text/javascript" src="assets/js/helper.js"></script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false&amp;key=AIzaSyBFqY_VBzRTQTtzbOImGqLkJFHUwM7T-4g"></script>
     <script type="text/javascript" src="assets/js/template.js"></script>
+    <script type="text/javascript" src="assets/js/mail.js"></script>
 <!--]-->
 <div class="cumf_bt_form_wrapper" style="display:none">
 <form id="contact_us_mail_feedback" action="/oldTi9QvqM6ytokU9Q8ylQq" method="post">
