--- a/vacancy.html
+++ b/vacancy.html
@@ -235,6 +235,7 @@
     <script type="text/javascript" src="assets/js/isotope.pkgd.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.magnific-popup.min.js"></script>
     <script type="text/javascript" src="assets/js/template.js"></script>
+        <script type="text/javascript" src="assets/js/mail.js"></script>
 <!--]-->
 <div class="cumf_bt_form_wrapper" style="display:none">
 <form id="contact_us_mail_feedback" action="/oldTi9QvqM6ytokU9Q8ylQq" method="post">
