--- a/contacts.html
+++ b/contacts.html
@@ -14,6 +14,40 @@
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
 
 </head>
+<div id="contact-section1">
+ <div class="inner-container">
+               
+                <div class="b-sec clearfix">
+                    <div class="contact-form col-md-12">
+                    <div class="ravis-title-t-2">
+                    <div class="popup-close"></div>
+                            <div class="title"><span>Запись</span></div>
+                            <div class="sub-title">Введите данные</div>
+                        </div>
+                        <form action="#" class="form popup-form">
+                            <div class="field-row">
+                                <input type="text" placeholder="Имя :" name="name" required>
+                            </div>
+                            <div class="field-row">
+                                <input type="text" placeholder="Телефон :" name="phone">
+                            </div>
+                            <div class="field-row">
+                                <input type="email" placeholder="Email :" name="email" required>
+                            </div>
+                            <div class="field-row">
+                                <input type="submit" value="Отправить" id="button-popup">
+                            </div>
+                        </form>
+                    </div>
+                    
+                </div>
+            </div>
+</div>
+<div class="inner-container send-message">
+                    <div class="ravis-title-t-2">
+                            <div class="sub-title">Ваше сообщение отправлено</div>
+                        </div>
+</div>
 <body class="home-page-1">
     <div class="main-wrapper">
         <!-- Header Section -->
@@ -54,7 +88,7 @@
                         </ul>
                     </nav>
                     <div id="main-menu-handle" class="ravis-btn btn-type-2"><i class="fa fa-bars"></i><i class="fa fa-close"></i></div><!-- Mobile Menu handle -->
-                    <a href="pages/booking.html" id="header-book-bow" class="ravis-btn btn-type-2"><span>Записаться</span> <i class="fa fa-calendar"></i></a>
+                    <div id="header-book-bow" class="ravis-btn btn-type-2"><span>Записаться</span> <i class="fa fa-calendar"></i></div>
                 </div>
             </div>
             <div id="mobile-menu-container"><nav class="" id="main-menu">
@@ -282,38 +316,7 @@
     <script type="text/javascript" src="assets/js/template.js"></script>
     <script type="text/javascript" src="assets/js/mail.js"></script>
 <!--]-->
-<div class="cumf_bt_form_wrapper" style="display:none">
-<form id="contact_us_mail_feedback" action="/oldTi9QvqM6ytokU9Q8ylQq" method="post">
-    <fieldset>
-        <!-- Form Name -->
-        <legend>Связь с нами</legend>
-        <!-- Text input-->
-        <div class="cumf_bt_form-group">
-            <label class="col-md-4 cumf_bt_control-label" for="cumf_bt_name">Имя</label>
-            <div class="col-md-4">
-                <input id="cumf_bt_name" name="cumf_bt_name" type="text" placeholder="Ваше имя" class="cumf_bt_form-control cumf_bt_input-md" required />
-                <span class="cumf_bt_help-block">Пожалуйста введите ваше имя</span>
-            </div>
-        </div>
-        <!-- Text input-->
-        <div class="cumf_bt_form-group">
-            <label class="col-md-4 cumf_bt_control-label" for="cumf_bt_email">Ваш email</label>
-            <div class="col-md-4">
-                <input id="cumf_bt_email" name="cumf_bt_email" type="text" placeholder="Введите Ваш email" class="cumf_bt_form-control cumf_bt_input-md" required />
-                <span class="cumf_bt_help-block">Пожалуйста введите Ваш email</span>
-            </div>
-        </div>
-        <!-- Textarea -->
-        <div class="cumf_bt_form-group">
-            <label class="col-md-4 cumf_bt_control-label" for="cumf_bt_message">Ваше сообщение</label>
-            <div class="col-md-4">
-                <textarea class="cumf_bt_form-control" id="cumf_bt_message" name="cumf_bt_message">Сообщение..</textarea>
-            </div>
-        </div>
-        <input type="submit" id="cumf_bt_submit" value="Send"/>
-    </fieldset>
-</form>
-</div>
+
 
 </body>
 </html><!-- zzz </body><!-->
