--- a/masters.html
+++ b/masters.html
@@ -13,6 +13,40 @@
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
 
 </head>
+<div id="contact-section1">
+ <div class="inner-container">
+               
+                <div class="b-sec clearfix">
+                    <div class="contact-form col-md-12">
+                    <div class="ravis-title-t-2">
+                    <div class="popup-close"></div>
+                            <div class="title"><span>Запись</span></div>
+                            <div class="sub-title">Введите данные</div>
+                        </div>
+                        <form action="#" class="form popup-form">
+                            <div class="field-row">
+                                <input type="text" placeholder="Имя :" name="name" required>
+                            </div>
+                            <div class="field-row">
+                                <input type="text" placeholder="Телефон :" name="phone">
+                            </div>
+                            <div class="field-row">
+                                <input type="email" placeholder="Email :" name="email" required>
+                            </div>
+                            <div class="field-row">
+                                <input type="submit" value="Отправить" id="button-popup">
+                            </div>
+                        </form>
+                    </div>
+                    
+                </div>
+            </div>
+</div>
+<div class="inner-container send-message">
+                    <div class="ravis-title-t-2">
+                            <div class="sub-title">Ваше сообщение отправлено</div>
+                        </div>
+</div>
 <body class="home-page-1">
     <div class="main-wrapper">
         <!-- Header Section -->
@@ -53,7 +87,7 @@
                         </ul>
                     </nav>
                     <div id="main-menu-handle" class="ravis-btn btn-type-2"><i class="fa fa-bars"></i><i class="fa fa-close"></i></div><!-- Mobile Menu handle -->
-                    <a href="pages/booking.html" id="header-book-bow" class="ravis-btn btn-type-2"><span>Записаться</span> <i class="fa fa-calendar"></i></a>
+                   <div id="header-book-bow" class="ravis-btn btn-type-2"><span>Записаться</span> <i class="fa fa-calendar"></i></div>
                 </div>
             </div>
             <div id="mobile-menu-container"><nav class="" id="main-menu">
