fix send mail forms

--- a/contacts.html
+++ b/contacts.html
@@ -162,7 +162,7 @@
 
                 <div class="b-sec clearfix">
                     <div class="contact-form col-md-6">
-                        <form action="#" class="form">
+                        <form action="#" class="form popup-form1">
                             <div class="field-row">
                                 <input type="text" placeholder="Имя :" name="name" required>
                             </div>
