--- a/guestbook.html
+++ b/guestbook.html
@@ -161,7 +161,7 @@
                             <div class="title"><span>Добавить отзыв</span></div>
                             <div class="sub-title">Нам важно Ваше мнение</div>
                         </div>
-                        <form action="#" class="guest-book-form form">
+                        <form action="#" class="guest-book-form form popup-form1">
                             <div class="field-row">
                                 <input type="text" placeholder="Как вас зовут ?" name="name" required>
                             </div>
