--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                     <div class="r-sec col-md-8">
-                        <form class="booking-form clearfix form" action="#"><!-- Do Not remove the classes -->
+                        <form class="booking-form clearfix form popup-form1" action="#"><!-- Do Not remove the classes -->
                             <div class="col-md-10">
                                 <div class="row">
                                     <div class="input-daterange">
