add masters in form

--- a/index.html
+++ b/index.html
@@ -181,11 +181,12 @@
                                         <select name="room-type">
                                             <option value="">Мастер</option>
                                             <!-- Select box items ( you can change the items and its value based on your project's needs ) -->
-                                            <option value="2">1</option>
-                                            <option value="3">2</option>
-                                            <option value="4">3</option>
-                                            <option value="5">4</option>
-                                            <option value="6">5</option>
+                                            <option value="Камила">Камила</option>
+                                            <option value="Алина">Алина</option>
+                                            <option value="Полина">Полина</option>
+                                            <option value="Карина">Карина</option>
+                                            <option value="Эля">Эля</option>
+                                            <option value="Женя">Женя</option>
                                         </select>
                                         <!-- End of Select boxes -->
                                     </div>
